# gakuen-imas-localify

./: .gitattributes  .gitignore  .gitmodules  README.md  build.gradle  settings.gradle  update_submodule.bat
.github/workflows/: build.yml  update.yml
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/io/github/chinosk/gakumas/localify/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: about_contributors_en.json  about_contributors_zh_cn.json  about_contributors_zh_tw.json  xposed_init
app/src/main/assets/gakumas-local/local-files/: generic.json  localization.json
app/src/main/assets/gakumas-local/local-files/resource/: adv_cidol-amao-3-000_01.txt  adv_cidol-amao-3-000_02.txt  adv_cidol-amao-3-000_03.txt  adv_cidol-fktn-3-000_01.txt  adv_cidol-fktn-3-000_02.txt  adv_cidol-fktn-3-000_03.txt  adv_cidol-hrnm-3-000_01.txt  adv_cidol-hrnm-3-000_02.txt  adv_cidol-hrnm-3-000_03.txt  adv_cidol-hski-3-000_01.txt  adv_cidol-hski-3-000_02.txt  adv_cidol-hski-3-000_03.txt  adv_cidol-kcna-3-000_01.txt  adv_cidol-kcna-3-000_02.txt  adv_cidol-kcna-3-000_03.txt  adv_cidol-kllj-3-000_01.txt  adv_cidol-kllj-3-000_02.txt  adv_cidol-kllj-3-000_03.txt  adv_cidol-shro-3-000_01.txt  adv_cidol-shro-3-000_02.txt  adv_cidol-shro-3-000_03.txt  adv_cidol-ssmk-3-000_01.txt  adv_cidol-ssmk-3-000_02.txt  adv_cidol-ssmk-3-000_03.txt  adv_cidol-ttmr-3-000_01.txt  adv_cidol-ttmr-3-000_02.txt  adv_cidol-ttmr-3-000_03.txt  adv_csprt-1-0000_01.txt  adv_csprt-1-0000_02.txt  adv_csprt-1-0001_01.txt  adv_csprt-1-0001_02.txt  adv_csprt-1-0002_01.txt  adv_csprt-1-0002_02.txt  adv_csprt-1-0003_01.txt  adv_csprt-1-0003_02.txt  adv_csprt-1-0004_01.txt  adv_csprt-1-0004_02.txt  adv_csprt-1-0005_01.txt  adv_csprt-1-0005_02.txt  adv_csprt-1-0006_01.txt  (+883 more)
app/src/main/cpp/: CMakeLists.txt  libMarryKotone.cpp  localify.cpp
app/src/main/cpp/GakumasLocalify/: BaseDefine.h  Hook.cpp  Hook.h  Il2cppUtils.hpp  Local.cpp  Local.h  Log.cpp  Log.h  Misc.cpp  Misc.h  Misc.hpp  Plugin.cpp  Plugin.h
app/src/main/cpp/GakumasLocalify/camera/: baseCamera.cpp  baseCamera.hpp  camera.cpp  camera.hpp
app/src/main/cpp/GakumasLocalify/config/: Config.cpp  Config.hpp
app/src/main/java/io/github/chinosk/gakumas/localify/: ActivityExtends.kt  ConfigUpdateListener.kt  GakumasHookMain.kt  MainActivity.kt  TranslucentActivity.kt
app/src/main/res/drawable/: splash_style.xml  start_game.xml  table_row_border.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
img/: main.cpp  main.kt
(+31 files in other folders)
